# non-euclid-Engine

./: .gitignore  CMakeLists.txt  README.md  temp.txt
data/models/container/: container.mtl
data/models/floor/: floor.mtl
data/models/poleLevel/: poleLevel.mtl
data/models/portal/: portal.mtl
data/shaders/: Portal_Vertex.shader
docs/: WindowsBuildTutorial.md
engine/: CMakeLists.txt
engine/src/: application.cpp  application.hpp  core.hpp  layer.cpp  layer.hpp  layer_stack.cpp  layer_stack.hpp  main.cpp  window.hpp
engine/src/events/: event.hpp  key_event.hpp  mouse_event.hpp  window_event.hpp
engine/src/platform/OpenGL/: GLWindow.cpp  GLWindow.hpp
game/: CMakeLists.txt
game/src/: Playground.cpp  Playground.hpp  main.cpp
include/glad/: glad.h
libs/Win/Debug/: assimp.lib  glfw3.lib
nonEuclid/: CMakeLists.txt
nonEuclid/data/models/cube/: cube.mtl
nonEuclid/data/models/plane/: plane.mtl
nonEuclid/data/shaders/: Portal_Fragment.shader  Portal_Vertex.shader  portal.vert
nonEuclid/src/: Camera.h  CollisionHandler.h  Engine.cpp  Engine.h  EventHandler.cpp  EventHandler.h  IncludeHeaders.h  Level.h  Mesh.h  Model.cpp  Model.h  ObjHandler.h  Object.cpp  Object.h  ObjectHandler.cpp  Portal.cpp  Portal.h  PositionUi.h  Shader.cpp  Shader.h  UI.h  UiWindow.cpp  UiWindow.h  Window.cpp  Window.h  main.cpp
nonEuclid/src/components/: Component.cpp  Component.h  Render3D.cpp  Render3D.h
nonEuclid/src/core/: MemTypes.h  Transform.h
nonEuclid/src/game_objects/: GameObject.cpp  GameObject.h
nonEuclid/src/physics/: BoundaryBox.h  CollisionHandler.h
nonEuclid/src/render/: asset_loader.h  camera.h  material.h  mesh.h  model.h  render_engine.cpp  render_engine.h  render_object.cpp  render_object.h  render_target.h  shader.h  texture.h
nonEuclid/src/skybox/: Skybox.cpp  Skybox.h
nonEuclid/src/ui/: InspectorWindow.cpp  InspectorWindow.h  UIWindow.cpp  UIWindow.h
nonEuclid/src/utils/: id.h
src/: AABB.h  BoundaryBox.h  Camera.h  CollisionHandler.h  Engine.h  EventHandler.h  IncludeHeaders.h  Level.h  Mesh.h  Model.h  Move.h  ObjHandler.h  Object.h  Player.h  Portal.h  PositionUi.h  Ray.h  Shader.cpp  Shader.h  UI.h  UiWindow.h  Window.h  main.cpp  temp_main.cpp
src/Engine/: Engine.cpp  Engine.h  EventHandler.cpp  EventHandler.h  Shader.cpp  Shader.h  Window.cpp  Window.h
src/Engine/Object/: BoundaryBox.cpp  BoundaryBox.h  CollisionHandler.cpp  CollisionHandler.h  Level.cpp  Level.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ObjHandler.cpp  ObjHandler.h  Object.cpp  Object.h  Ray.cpp  Ray.h
src/Engine/Object/Portal/: Portal.cpp  Portal.h
src/Engine/Player/: Camera.cpp  Camera.h  Move.h  Player.cpp  Player.h
src/Handlers/: CollisionHandler.h  EventHandler.h
src/Objects/: BoundaryBox.h  Mesh.h  Player.h  Portal.h
src/UI/: UI.h
tools/cmake/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake
